Finihed message for 29 Oct 2023.

--- a/content/posts/2023-10-24.md
+++ b/content/posts/2023-10-24.md
@@ -77,15 +77,34 @@ Here is another question: Who anointed David? Who do you think it was?
 
 ## Some woman
 
-Now we come to when Jesus was invited to eat with a Pharisee named Simon. A woman came in during the meal and cried so much that she wet his feet with her tears. This was not a few quiet sobs. The Greek word is κλαίουσα, and it means [cry, wail, lament; any loud expression of pain or sorrow](http://www.perseus.tufts.edu/hopper/morph?l=%CE%BA%CE%BB%CE%B1%CE%AF%CE%BF%CF%85%CF%83%CE%B1&la=greek#lexicon)
+Now we come to a time we hear about in [Luke, chapter 7](https://www.crosswire.org/study/parallelstudy.jsp?key=Luke+7%3A36#cv). Jesus was invited to eat with a Pharisee. We later find out that his name was Simon. However Luke doesn't tell us the name of some woman who came in during the meal. She came in and began to weep. She cried so much that she wet Jesus' feet with her tears, then she dried his feet with her hair.
+
+This was not a few quiet sobs. The Greek word is κλαίουσα, and it means [cry, wail, lament; any loud expression of pain or sorrow](http://www.perseus.tufts.edu/hopper/morph?l=%CE%BA%CE%BB%CE%B1%CE%AF%CE%BF%CF%85%CF%83%CE%B1&la=greek#lexicon). She was undone. I don't know what brought her undone, but she was undone. Maybe it was the message that she heard from Jesus -- a gospel that heals the broken-hearted, that sets the captives free, that restores sight to the blinded, that sends out the crushed with forgiveness, that proclaims the acceptable year of the Lord. Maybe it was something about the way Jesus looked? Maybe it was something to do with his feet? *How beautiful are the feet of the one who brings good news.*
+
+It seems that Simon could not see what the woman saw. He was bothered by the woman and thought to himself that Jesus cannot be a prophet because a prophet wouldn't let her get close. (She had a bad name, and his God radar would tell him that if he really was a prophet.)
+
+So much for Simon. Back to the woman. She was kissing Jesus on the feet. Talk about indecorum! Then she brought out her flask of perfume and poured it on his feet.
+
+## Who anointed Jesus
+
+Here is yet another question: Who anointed Jesus? Who do you think it was?
+
+## Aspirations
+
+It strikes me as utterly amazing that the one who God chose to perform the physical anointing of the anointed one, to Christ the Christ, was an anonymous woman who had a bad name around town. Our aspiration as a church is surely to be like that woman: undone, wetting Christ's feet with our tears, wiping them with our hair, lavishing our precious things on him.
+
+I'm not saying that I do this myself, or even go near approaching it. If you want my opinion, most of the time I'm just like Simon -- missing the good news, focussing on the wrong things, having an evil eye.
+
+Jesus ends up saying to the woman, *Your faith has saved you.* And what faith is that? It is that Jesus is the Christ. Whatever we do, we do well when we recognise Christ, hear his good news, and are restored by him.
 
 ## Song
 
-https://www.youtube.com/watch?v=w3V3HU_eg5E
+I'd like to finish my message by having us listen to this [Sydney Carter](https://en.wikipedia.org/wiki/Sydney_Carter) song sung by St Joseph’s Church Music Group:
+
+[Said Judas to Mary](https://www.youtube.com/watch?v=w3V3HU_eg5E)
 
 ## Acknowledgments
 
 I found the image of the woman anointing Jesus on the Interweb. Unfortunately, I don't know who painted it. If you know, please let me know so that I can acknowledge the artist here.
 
-# References
-
+*Said Judas to Mary* is a beautiful rendition by [St Joseph’s Church Music Group in Newbury](https://www.youtube.com/@stjosephsmusicgroupnewbury4016).
