--- a/content/posts/2023-10-24.md
+++ b/content/posts/2023-10-24.md
@@ -107,4 +107,5 @@ I'd like to finish my message by having us listen to this [Sydney Carter](https:
 
 I found the image of the woman anointing Jesus on the Interweb. Unfortunately, I don't know who painted it. If you know, please let me know so that I can acknowledge the artist here.
 
-*Said Judas to Mary* is a beautiful rendition by [St Joseph’s Church Music Group in Newbury](https://www.youtube.com/@stjosephsmusicgroupnewbury4016).
+*Said Judas to Mary* is beautifully sung by [St Joseph’s Church Music Group in Newbury](https://www.youtube.com/@stjosephsmusicgroupnewbury4016).
+
