--- a/content/posts/2023-10-24.md
+++ b/content/posts/2023-10-24.md
@@ -77,7 +77,7 @@ Here is another question: Who anointed David? Who do you think it was?
 
 ## Some woman
 
-Now we come to a time we hear about in [Luke, chapter 7](https://www.crosswire.org/study/parallelstudy.jsp?key=Luke+7%3A36#cv). Jesus was invited to eat with a Pharisee. We later find out that his name was Simon. However Luke doesn't tell us the name of some woman who came in during the meal. She came in and began to weep. She cried so much that she wet Jesus' feet with her tears, then she dried his feet with her hair.
+Now we come to a time we hear about in [Luke, chapter 7](https://www.crosswire.org/study/parallelstudy.jsp?key=Luke+7%3A36#cv). Jesus was invited to eat with a Pharisee. We later find out that his name was Simon. However Luke doesn't tell us the name of a woman who came in during the meal. She came in and began to weep. She cried so much that she wet Jesus' feet with her tears, then she dried his feet with her hair.
 
 This was not a few quiet sobs. The Greek word is κλαίουσα, and it means [cry, wail, lament; any loud expression of pain or sorrow](http://www.perseus.tufts.edu/hopper/morph?l=%CE%BA%CE%BB%CE%B1%CE%AF%CE%BF%CF%85%CF%83%CE%B1&la=greek#lexicon). She was undone. I don't know what brought her undone, but she was undone. Maybe it was the message that she heard from Jesus -- a gospel that heals the broken-hearted, that sets the captives free, that restores sight to the blinded, that sends out the crushed with forgiveness, that proclaims the acceptable year of the Lord. Maybe it was something about the way Jesus looked? Maybe it was something to do with his feet? *How beautiful are the feet of the one who brings good news.*
 
@@ -91,7 +91,7 @@ Here is the first question again: Who anointed Jesus? Who do you think it was?
 
 ## Aspirations
 
-It strikes me as utterly amazing that the one who God chose to perform the physical anointing of the anointed one, to Christ the Christ, was an anonymous woman who had a bad name around town. Our aspiration as a church is surely to be like that woman: undone, wetting Christ's feet with our tears, wiping them with our hair, lavishing our precious things on him.
+It strikes me as utterly amazing that the one who God chose to perform the physical anointing of the anointed one, to Christ the Christ, was some woman who had a bad name around town. Our aspiration as a church is surely to be like that woman: undone, wetting Christ's feet with our tears, wiping them with our hair, lavishing our precious things on him.
 
 I'm not saying that I do this myself, or go anywhere near approaching it. If you want my opinion, most of the time I'm just like Simon -- missing the good news, focussing on the wrong things, having an evil eye.
 
@@ -99,7 +99,7 @@ Jesus ends up saying to the woman, *Your faith has saved you.* And what faith is
 
 ## Song
 
-I'd like to finish my message by having us listen to this [Sydney Carter](https://en.wikipedia.org/wiki/Sydney_Carter) song sung by St Joseph’s Church Music Group:
+I'd like to finish my message by listening to a [Sydney Carter](https://en.wikipedia.org/wiki/Sydney_Carter) song sung by St Joseph’s Church Music Group:
 
 [Said Judas to Mary](https://www.youtube.com/watch?v=w3V3HU_eg5E)
 
@@ -108,4 +108,3 @@ I'd like to finish my message by having us listen to this [Sydney Carter](https:
 I found the image of the woman anointing Jesus on the Interweb. Unfortunately, I don't know who painted it. If you know, please let me know so that I can acknowledge the artist here.
 
 *Said Judas to Mary* is beautifully sung by [St Joseph’s Church Music Group in Newbury](https://www.youtube.com/@stjosephsmusicgroupnewbury4016).
-
