--- a/content/posts/2023-10-24.md
+++ b/content/posts/2023-10-24.md
@@ -83,7 +83,7 @@ This was not a few quiet sobs. The Greek word is κλαίουσα, and it means 
 
 It seems that Simon could not see what the woman saw. He was bothered by the woman and thought to himself that Jesus could not be a prophet because if he was then he would know what kind of woman she was and that she had a bad name.
 
-So much for Simon. Back to the woman. She was kissing Jesus on the feet. Talk about indecorum! Then she brought out her flask of perfume and poured it on his feet.
+So much for Simon the Pharisee. Back to the woman. She was kissing Jesus on the feet. Talk about indecorum! Then she brought out her flask of perfume and poured it on his feet.
 
 ## Who anointed Jesus
 
@@ -93,7 +93,7 @@ Here is the first question again: Who anointed Jesus? Who do you think it was?
 
 It strikes me as utterly amazing that the one who God chose to perform the physical anointing of the anointed one, to Christ the Christ, was some woman who had a bad name around town. Our aspiration as a church is surely to be like that woman: undone, wetting Christ's feet with our tears, wiping them with our hair, lavishing our precious things on him.
 
-I'm not saying that I do this myself, or go anywhere near approaching it. If you want my opinion, most of the time I'm just like Simon -- missing the good news, focussing on the wrong things, having an evil eye.
+I'm not saying that I do this myself, or go anywhere near approaching it. If you want my opinion, most of the time I'm just like Simon the Pharisee -- missing the good news, focussing on the wrong things, having an evil eye.
 
 Jesus ends up saying to the woman, *Your faith has saved you.* And what faith is that? It is that Jesus is the Christ. Whatever we do, we do well when we recognise Christ, hear his good news, are healed by him, and pour out our treasures at his feet.
 
